Import 0.22 compatible boilerplate
Signed-off-by: Pierre-Alexandre Meyer <pierre@mouraf.org>